--- a/Bellona Club/source/bellonatop.tex
+++ b/Bellona Club/source/bellonatop.tex
@@ -1,5 +1,5 @@
 \documentclass[
-paper=a5,
+a5paper,
 %paper=5.5in:8.5in,
 BCOR=7mm,
 twoside,
@@ -35,16 +35,20 @@ headings=big]{scrbook} % Document font size and paper size
 \usepackage{ebgaramond} 
 \usepackage{epigraph}
 
-
+\MakeAutoQuote{»}{«}
 
 \setmainfont{EB Garamond}
 \setdefaultlanguage[variant=uk]{english}
-\newcommand{\HUGE}{\fontsize{50}{60}\selectfont}
-\newcommand{\moderatelyhuge}{\fontsize{50}{60}\selectfont}
+\setotherlanguage{french}
+\newcommand{\HUGE}{\fontsize{35}{40}\selectfont}
+\newcommand{\moderatelyhuge}{\fontsize{35}{45}\selectfont}
 \newcommand{\reasonablyhuge}{\fontsize{30}{40}\selectfont}
 \newfontfamily\chapterfont{EB Garamond}
-\newfontfamily\mytitlefont{GramophoneShadedNF.ttf}
-\newfontfamily\myauthorfont{Gramophone.NF.ttf}
+%\newfontfamily\mytitlefont{GramophoneShadedNF.ttf}
+%\newfontfamily\myauthorfont{Gramophone.NF.ttf}
+\newfontfamily\mytitlefont{RaconteurNf-LOlE.ttf}
+\newfontfamily\myauthorfont{RaconteurNf-LOlE.ttf}
+
 \newfontfamily\lettrinefont{Decocaps.ttf}
 \renewcommand{\LettrineFontHook}{\fontspec{Decocaps.ttf}}
 
@@ -55,6 +59,17 @@ headings=big]{scrbook} % Document font size and paper size
 %\renewcommand*{\partformat}{\partname~\thepart} %renew so it doesn't have the trailing period
 \renewcommand*{\chapterformat}{\chaptername~\thechapter}
 %\newcommand*\hideentrynumber[1]{}
+
+\makeatletter
+\@ifclasswith{scrbook}{a5paper}
+{%
+  \def\coverimagesize{0.7\linewidth}
+%  \newcommand{\HUGE}{\fontsize{50}{60}\selectfont}
+}{%
+    \def\coverimagesize{0.8\linewidth}
+%  \newcommand{\HUGE}{\fontsize{60}{70}\selectfont}
+}
+\makeatother
 
 \newcount\zzc
 \makeatletter
@@ -112,13 +127,16 @@ headings=big]{scrbook} % Document font size and paper size
  \newgeometry{left=10mm,right=10mm,top=7mm, bottom=7mm}
 
   \begin{center}\setstretch{1.8}\mytitlefont
-{\setstretch{1.8}\moderatelyhuge The\\ Unpleasantness}\\
-\vspace{0.5cm}
-{\setstretch{1.8}\moderatelyhuge at the}\\
-\vspace{0.2cm}
+  
+{\setstretch{1.8}\reasonablyhuge The}\\
+\vspace{0.4cm}
+{\setstretch{1.8}\HUGE Unpleasantness}\\
+\vspace{0.4cm}
+{\setstretch{1.8}\reasonablyhuge at the}\\
+\vspace{0.4cm}
 {\HUGE Bellona Club}\\
 \vfill
-\includegraphics[width=.5\linewidth]{decodesign}\\
+\includegraphics[width=\coverimagesize]{jardin}\\
 \vfill
 \setstretch{1.5}\myauthorfont
 {\setstretch{1.5}\reasonablyhuge Dorothy L. Sayers}\\
@@ -187,6 +205,12 @@ headings=big]{scrbook} % Document font size and paper size
 \chapter*{Colophon}
 \begin{center}
 EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-16th century. This digital version reproduces the original design by Claude Garamont closely: the source for the letterforms is a scan of a specimen known as the \enquote{Berner specimen,} which was composed in 1592 by Conrad Berner, the son-in-law of Christian Egenolff and his successor at the Egenolff print office.  \\github.com/georgd/EB-Garamond
+\vfill
+Title is set in »Raconteur NF«, by Nick Curtis.\\fontspace.com/nicks-fonts
+\vfill
+Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
+\vfill
+Title page decoration is from an anonymous illustration entitled \foreignquote{french}{Le Jardin d'Hiver du Ritz}, which appeared in the January 1924 issue of the fashion magazine \foreignquote{french}{Art - Goût - Beauté: Feuillets de l'élégance féminine}. The original is held by the Rijksmuseum in Amsterdam.
 \vfill
 Typeset in \LaTeX{}.
 \end{center}
