Changed font to 11pt.

--- a/Whose Body/source/README
+++ b/Whose Body/source/README
@@ -1,3 +1,6 @@
+Emendations:
+* In Chapter 2, I have italicized "Medical Jurisprudence", as the capitalization used and its context strongly implies that it is a book.
+
 Fonts used are:
 * EB Garamond: https://www.1001freefonts.com/eb-garamond.font
 * Riesling: https://www.fontsquirrel.com/fonts/riesling
