--- a/Whose Body/source/bodytop.tex
+++ b/Whose Body/source/bodytop.tex
@@ -1,6 +1,6 @@
 \documentclass[
-%paper=5.5in:8.5in,
-a5paper,
+paper=5.5in:8.5in,
+%a5paper,
 BCOR=7mm,
 twoside,
 DIV=calc,
@@ -35,6 +35,7 @@ headings=big]{scrbook} % Document font size and paper size
 \usepackage{ebgaramond} 
 \usepackage{epigraph}
 \usepackage{dialogue}
+\usepackage{ellipsis}
 
 \MakeAutoQuote{»}{«}
 \catcode`\—=13
