--- a/Bellona Club/source/bellonatop.tex
+++ b/Bellona Club/source/bellonatop.tex
@@ -1,6 +1,6 @@
 \documentclass[
-a5paper,
-%paper=5.5in:8.5in,
+%a5paper,
+paper=5.5in:8.5in,
 BCOR=7mm,
 twoside,
 DIV=calc,
@@ -140,7 +140,7 @@ headings=big]{scrbook} % Document font size and paper size
 \vspace{0.4cm}
 {\HUGE Bellona Club}\\
 \vfill
-\includegraphics[width=\coverimagesize]{jardin}\\
+\includegraphics[width=\coverimagesize]{clubguys}\\
 \vfill
 \setstretch{1.5}\myauthorfont
 {\setstretch{1.5}\reasonablyhuge Dorothy L. Sayers}\\
@@ -214,7 +214,7 @@ Title is set in »Raconteur NF«, by Nick Curtis.\\www.nicksfonts.com
 \vfill
 Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
 \vfill
-Title page decoration is from an illustration entitled \foreignquote{french}{Le Jardin d'Hiver du Ritz}, which appeared in the January 1924 issue of the French fashion magazine \foreignquote{french}{Art - Goût - Beauté: Feuillets de l'élégance féminine}. The original is held by the Rijksmuseum in Amsterdam.
+Title page decoration is from an illustration by German artist Ernst Kreuscher entitled »Im Club« (»In the Club«). It was published in a 1922 issue of \textit{STYL: Blätter für Mode und die angenehmen Dinge des Lebens}, a fashion and lifestyle magazine published in Berlin from 1922-1924.
 \vfill
 Typeset in \LaTeX{}.
 \end{center}
