--- a/Whose Body/source/whosebodytop.tex
+++ b/Whose Body/source/whosebodytop.tex
@@ -1,6 +1,6 @@
 \documentclass[
-paper=5.5in:8.5in,
-%a5paper,
+%paper=5.5in:8.5in,
+a5paper,
 BCOR=7mm,
 twoside,
 DIV=calc,
@@ -101,10 +101,10 @@ headings=big]{scrbook} % Document font size and paper size
 \makeatletter
 \@ifclasswith{scrbook}{a5paper}
 {%
-  \def\coverimagesize{.5\linewidth}
+  \def\coverimagesize{.6\linewidth}
   \newcommand{\HUGE}{\fontsize{90}{90}\selectfont}
 }{%
-    \def\coverimagesize{0.55\linewidth}
+    \def\coverimagesize{.7\linewidth}
   \newcommand{\HUGE}{\fontsize{90}{90}\selectfont}
 }
 \makeatother
@@ -130,7 +130,7 @@ headings=big]{scrbook} % Document font size and paper size
 %\vspace{0.5cm}
 %{\HUGE Body?}\\
 \vspace{0.2cm}
-\includegraphics[width=\coverimagesize]{dude}\\
+\includegraphics[width=\coverimagesize]{pensiveguy}\\
 \vspace{0.5cm}
 \setstretch{1.5}\mytitlefont
 {\setstretch{1.5}\reasonablyhuge Dorothy L. Sayers}\\
@@ -211,7 +211,7 @@ Title is set in »Riesling«, by Bright Ideas Foundry.
 \vfill
 Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
 \vfill
-Title page illustration is cropped from an anonymous 1920 engraving appearing in the fashion magazine \foreignquote{french}{Le Goût du Jour}. The original is held by the Rijksmuseum in Amsterdam.
+Title page illustration is a 1922 lithograph by German/British artist Stephan Krotowski (1881-1948) entitled »Frühjahr« (»Spring«). It originally appeared in \textit{STYL: Blätter für Mode und die angenehmen Dinge des Lebens}, a fashion and lifestyle magazine published in Berlin between 1922 and 1924.
 \vfill
 Typeset in \LaTeX{}.
 \end{center}
