signature goof--fixed

--- a/Bellona Club/source/bellonatop.tex
+++ b/Bellona Club/source/bellonatop.tex
@@ -1,6 +1,6 @@
 \documentclass[
-%a5paper,
-paper=5.5in:8.5in,
+a5paper,
+%paper=5.5in:8.5in,
 BCOR=7mm,
 twoside,
 DIV=calc,
@@ -41,7 +41,7 @@ headings=big]{scrbook} % Document font size and paper size
 \protected\def—{\allowbreak\textemdash\allowbreak}
 \newcommand\longdash{\mbox{---\,}\ignorespaces{}}
 
-\setmainfont{EB Garamond}
+\setmainfont{EB Garamond}[UprightFeatures={CharacterVariant=11}]
 \setdefaultlanguage[variant=uk]{english}
 \setotherlanguage{french}
 \newcommand{\HUGE}{\fontsize{35}{40}\selectfont}
