Replaced "..." with ellipses; other tweaks

--- a/Bellona Club/source/bellonatop.tex
+++ b/Bellona Club/source/bellonatop.tex
@@ -44,14 +44,14 @@ headings=big]{scrbook} % Document font size and paper size
 \setmainfont{EB Garamond}[UprightFeatures={CharacterVariant=11}]
 \setdefaultlanguage[variant=uk]{english}
 \setotherlanguage{french}
-\newcommand{\HUGE}{\fontsize{35}{40}\selectfont}
-\newcommand{\moderatelyhuge}{\fontsize{35}{45}\selectfont}
-\newcommand{\reasonablyhuge}{\fontsize{30}{40}\selectfont}
+\newcommand{\HUGE}{\fontsize{50}{60}\selectfont}
+\newcommand{\moderatelyhuge}{\fontsize{40}{50}\selectfont}
+\newcommand{\reasonablyhuge}{\fontsize{40}{50}\selectfont}
 \newfontfamily\chapterfont{EB Garamond}
 %\newfontfamily\mytitlefont{GramophoneShadedNF.ttf}
 %\newfontfamily\myauthorfont{Gramophone.NF.ttf}
-\newfontfamily\mytitlefont{RaconteurNf-LOlE.ttf}
-\newfontfamily\myauthorfont{RaconteurNf-LOlE.ttf}
+\newfontfamily\mytitlefont{Gramophone.NF.ttf}
+\newfontfamily\myauthorfont{Gramophone.NF.ttf}
 
 \newfontfamily\lettrinefont{Decocaps.ttf}
 \renewcommand{\LettrineFontHook}{\fontspec{Decocaps.ttf}}
@@ -133,11 +133,11 @@ headings=big]{scrbook} % Document font size and paper size
   \begin{center}\setstretch{1.8}\mytitlefont
   
 {\setstretch{1.8}\reasonablyhuge The}\\
-\vspace{0.4cm}
+\vspace{0.1cm}
 {\setstretch{1.8}\HUGE Unpleasantness}\\
-\vspace{0.4cm}
+\vspace{0.3cm}
 {\setstretch{1.8}\reasonablyhuge at the}\\
-\vspace{0.4cm}
+\vspace{0.1cm}
 {\HUGE Bellona Club}\\
 \vfill
 \includegraphics[width=\coverimagesize]{clubguys}\\
@@ -208,13 +208,13 @@ headings=big]{scrbook} % Document font size and paper size
 \KOMAoptions{headings=openleft}
 \chapter*{Colophon}
 \begin{center}
-EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-16th century. This digital version reproduces the original design by Claude Garamont closely: the source for the letterforms is a scan of a specimen known as the \enquote{Berner specimen,} which was composed in 1592 by Conrad Berner, the son-in-law of Christian Egenolff and his successor at the Egenolff print office.  \\github.com/georgd/EB-Garamond
+EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-16\textsuperscript{th} century. This digital version reproduces the original design by Claude Garamont closely: the source for the letterforms is a scan of a specimen known as the \enquote{Berner specimen,} which was composed in 1592 by Conrad Berner, the son-in-law of Christian Egenolff and his successor at the Egenolff print office.  \\github.com/georgd/EB-Garamond
 \vfill
-Title is set in »Raconteur NF«, by Nick Curtis.\\www.nicksfonts.com
+Title is set in »Gramophone«, by Nick Curtis, based on French artist Achille Mauzan’s 1927 poster for Carpano, an Italian vermouth.\\www.nicksfonts.com
 \vfill
 Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
 \vfill
-Title page decoration is from an illustration by German artist Ernst Kreuscher entitled »Im Club« (»In the Club«). It was published in a 1922 issue of \textit{STYL: Blätter für Mode und die angenehmen Dinge des Lebens}, a fashion and lifestyle magazine published in Berlin from 1922-1924.
+Title page decoration is cropped from an illustration by German artist Ernst Kreuscher entitled »Im Club« (»In the Club«). It was published in a 1922 issue of \textit{STYL: Blätter für Mode und die angenehmen Dinge des Lebens}, a fashion and lifestyle magazine published in Berlin from 1922-1924.
 \vfill
 Typeset in \LaTeX{}.
 \end{center}
