--- a/Bellona Club/source/README
+++ b/Bellona Club/source/README
@@ -1,4 +1,4 @@
 Fonts used are:
 * EB Garamond: https://www.1001freefonts.com/eb-garamond.font
-* Raconteur: https://www.1001freefonts.com/raconteur.font
+* Gramophone: https://www.1001fonts.com/gramophone-font.html
 * Deco Caps: https://www.dafont.com/deco-caps.font
