Added Greek text to solution

--- a/Lord Peter Views The Body/source/viewsbodytop.tex
+++ b/Lord Peter Views The Body/source/viewsbodytop.tex
@@ -1,6 +1,6 @@
 \documentclass[
-a5paper,
-%paper=5.5in:8.5in,
+%a5paper,
+paper=5.5in:8.5in,
 BCOR=7mm,
 twoside,
 DIV=calc,
@@ -200,13 +200,29 @@ headings=big]{scrbook} % Document font size and paper size
 \begin{center}
 EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-16th century. This digital version reproduces the original design by Claude Garamont closely: the source for the letterforms is a scan of a specimen known as the \enquote{Berner specimen,} which was composed in 1592 by Conrad Berner, the son-in-law of Christian Egenolff and his successor at the Egenolff print office.  \\github.com/georgd/EB-Garamond
 \vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
 Title page is set in »Riesling«, by Bright Ideas Foundry.
+\vfill
+\rule{0.5\textwidth}{.4pt}
 \vfill
 Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
 \vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
 Title page illustration is from a fashion plate entitled \foreignquote{french}{Été 1923, No. 53}. The original is held by the Rijksmuseum in Amsterdam.
 \vfill
-Typeset in \LaTeX{}.
+\rule{0.5\textwidth}{.4pt}
+\vfill
+\textit{Lord Peter Views The Body} was Dorothy L. Sayers' (1893-1957) first collection of Lord Peter Wimsey short stories. It was originally published in 1928 by Victor Gollancz Limited in London (UK).
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+This typeset is dedicated to the public domain under a Creative Commons CC0 1.0 Universal deed: creativecommons.org/publicdomain/zero/1.0/
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+Typeset in \LaTeX{}. Last updated \today.
 \end{center}
 \thispagestyle{empty}
 \end{document}
