--- a/Clouds of Witness/source/cloudstop.tex
+++ b/Clouds of Witness/source/cloudstop.tex
@@ -1,13 +1,14 @@
 \PassOptionsToPackage{figuresright}{rotating}
 \documentclass[
-paper=5.5in:8.5in,
-%a5paper,
+%paper=5.5in:8.5in,
+a5paper,
 ]{scrbook} % Document font size and paper size
 
 \usepackage{bindery}
 \usepackage{dropcaps}
 \usepackage{illustrations}
 \usepackage{dialogue}
+\usepackage{epistolary}
 
 \setotherlanguage{french}
 
@@ -19,7 +20,6 @@ paper=5.5in:8.5in,
 
 \BeforeTOCHead[toc]{%
   \KOMAoptions{parskip=false}% no parskip in ToC
-%  \RedeclareSectionCommand[afterskip=1sp minus 1sp]{chapter}% no skip after ToC title
 \DeclareTOCStyleEntry[beforeskip=0.2cm,entryformat=\chapterfont,linefill=\TOCLineLeaderFill]{chapter}{chapter}
 }
 
@@ -43,33 +43,9 @@ paper=5.5in:8.5in,
 
 \frontmatter
 \pagestyle{empty}
-\begin{titlepage}
 
-\begin{letter}
-	\renewcommand{\HUGE}{\fontsize{50}{60}\selectfont}
-	\newcommand{\lesshuge}{\fontsize{40}{50}\selectfont}
-	\begin{tikzpicture}[remember picture, overlay]  
-		\node (pic) at ($(current page.south)+(0cm,9cm)$) {\includegraphics[width=.9\linewidth]{casino}};
-		\node[anchor=center,align=center,text width=\textwidth] (clouds) at ($(current page.north)+(0cm,-1.7cm)$) {\HUGE\mytitlefont Clouds};
-		\node[anchor=center,align=center,text width=\textwidth] (of) at ($(current page.north)+(0cm,-3.5cm)$) {\lesshuge\mytitlefont of};
-		\node[anchor=center,align=center,text width=\textwidth] (witness) at ($(current page.north)+(0cm,-5.3cm)$) {\HUGE\mytitlefont Witness};
-		\node[anchor=center,align=center,text width=\textwidth] (author) at ($(current page.south)+(0cm,1.5cm)$) {\Huge\myauthorfont Dorothy L. Sayers};
-	\end{tikzpicture}
-\end{letter}
+\includepdf[width=1.3\textwidth]{titlepage.jpg}
 
-\begin{a4}
-	\renewcommand{\HUGE}{\fontsize{50}{60}\selectfont}
-	\newcommand{\lesshuge}{\fontsize{40}{50}\selectfont}
-	\begin{tikzpicture}[remember picture, overlay]  
-		\node (pic) at ($(current page.south)+(0cm,8.5cm)$) {\includegraphics[width=.9\linewidth]{casino}};
-		\node[anchor=center,align=center,text width=\textwidth] (clouds) at ($(current page.north)+(0cm,-1.2cm)$) {\HUGE\mytitlefont Clouds};
-		\node[anchor=center,align=center,text width=\textwidth] (of) at ($(current page.north)+(0cm,-3cm)$) {\lesshuge\mytitlefont of};
-		\node[anchor=center,align=center,text width=\textwidth] (witness) at ($(current page.north)+(0cm,-4.8cm)$) {\HUGE\mytitlefont Witness};
-		\node[anchor=center,align=center,text width=\textwidth] (author) at ($(current page.south)+(0cm,1cm)$) {\Huge\myauthorfont Dorothy L. Sayers};
-	\end{tikzpicture}
-\end{a4}
-
-\end{titlepage}
 
 
 \KOMAoptions{headings=openany}
@@ -159,6 +135,8 @@ The inimitable stories of Tong-king never have any real ending, and this one, be
 \begin{minipage}{\textwidth}
 \textit{Clouds of Witness} was Dorothy L. Sayers' (1893\textendash1957) second Lord~Peter Wimsey novel. It was originally published in 1926 by T. Fisher Unwin in London (UK).
 \end{minipage}
+\vfill
+gutenberg.org/ebooks/70432
 \vfill
 \rule{0.5\textwidth}{.4pt}
 \vfill
