--- a/Clouds of Witness/source/style/bindery.sty
+++ b/Clouds of Witness/source/style/bindery.sty
@@ -1,26 +1,31 @@
-\usepackage{xcolor}
-\usepackage{fontspec}
-\usepackage[T1]{fontenc} % International character encodings
-\usepackage{makeidx}
-\usepackage{scrlayer-scrpage}
-\usepackage{pifont}
-\usepackage[maxlevel=3,autostyle]{csquotes}
-\usepackage[export]{adjustbox}
-\usepackage{polyglossia}
-\usepackage{afterpage}
-\usepackage{microtype}
-\usepackage{tocbasic}
-\usepackage[pass]{geometry}
-\usepackage{subfiles}
-\usepackage[all,defaultlines=2]{nowidow}
-\usepackage{setspaceenhanced}
-\usepackage{ebgaramond} 
-\usepackage{ellipsis}
-\usepackage{pdfpages}
-\usepackage{verse}
-\usepackage{epigraph}
-\usepackage{comment}
+\RequirePackage{xcolor}
+\RequirePackage{fontspec}
+\RequirePackage[T1]{fontenc} % International character encodings
+\RequirePackage{makeidx}
+\RequirePackage{scrlayer-scrpage}
+\RequirePackage{pifont}
+\RequirePackage[maxlevel=3,autostyle]{csquotes}
+\RequirePackage[export]{adjustbox}
+\RequirePackage{polyglossia}
+\RequirePackage{afterpage}
+\RequirePackage{microtype}
+\RequirePackage{tocbasic}
+\RequirePackage[pass]{geometry}
+\RequirePackage{subfiles}
+\RequirePackage[all,defaultlines=2]{nowidow}
+\RequirePackage{setspaceenhanced}
+\RequirePackage{ebgaramond} 
+\RequirePackage{ellipsis}
+\RequirePackage{pdfpages}
+\RequirePackage{verse}
+\RequirePackage{epigraph}
+\RequirePackage{comment}
+\RequirePackage{etoolbox}
+\RequirePackage{soul}
+\RequirePackage{enumitem}
+\RequirePackage{needspace}
 
+\setlist[description]{font=\normalfont\bfseries}
 
 \KOMAoption{BCOR}{7mm}
 \KOMAoption{twoside}{true}
@@ -30,17 +35,27 @@
 \KOMAoption{headings}{big}
 \KOMAoption{numbers}{noenddot}
 \KOMAoption{listof}{flat,nochaptergap}
+\KOMAoption{toc}{listof}
 
 \renewcommand\raggedsection{\centering} %always center chapter heads
 
 \graphicspath{ {./images/} }
+
+\newcommand*\hideentrynumber[1]{}
+
 
 \MakeAutoQuote{»}{«}
 \catcode`\—=13
 \protected\def—{\textemdash\allowbreak}
 \newcommand\longdash{\mbox{---\,}\ignorespaces{}} %corrects issue with lines breaking between dash and end quote
 
-\newcommand{\HUGE}{\fontsize{30}{40}\selectfont}
+\newcommand{\divider}{%
+  \par\vspace{0.5em}%
+  \noindent\hfil\rule{0.5\textwidth}{.4pt}\hfil%
+  \par\vspace{0.5em}%
+}
+
+\newcommand{\HUGE}{\fontsize{30}{30}\selectfont}
 \newcommand{\resetchapskip}{\renewcommand*{\chapterheadstartvskip}{\vspace{\@tempskipa}}}
 
 \setmainfont{EB Garamond}[UprightFeatures={CharacterVariant=11}]
@@ -56,8 +71,6 @@
 \defaultfontfeatures{Ligatures=TeX}
 
 \flushbottom
-
-\newcommand*\hideentrynumber[1]{}
 
 \setlength{\epigraphwidth}{0.8\textwidth}
 \renewcommand{\epigraphflush}{center}
@@ -98,7 +111,5 @@
   \chapter{#1}
   \endgroup
 }
-
-
 
   \makeatother
