--- a/Bellona Club/source/bellonatop.tex
+++ b/Bellona Club/source/bellonatop.tex
@@ -1,13 +1,12 @@
 \documentclass[
-%a5paper,
-paper=5.5in:8.5in,
+a5paper,
+%paper=5.5in:8.5in,
 ]{scrbook} % Document font size and paper size
 
 \usepackage{bindery}
 \usepackage{dropcaps}
 \usepackage{illustrations}
-\usepackage{epigraph}
-\usepackage{dialogue}
+\usepackage{epistolary}
 
 \setotherlanguage{french}
 
@@ -75,7 +74,7 @@ paper=5.5in:8.5in,
 
 
 
-\KOMAoptions{headings=openleft}
+\KOMAoptions{headings=openright}
 
 
 %\vspace*{-2\baselineskip}
