--- a/Lord Peter Views The Body/source/viewsbodytop.tex
+++ b/Lord Peter Views The Body/source/viewsbodytop.tex
@@ -1,104 +1,21 @@
 \documentclass[
 a5paper,
 %paper=5.5in:8.5in,
-BCOR=7mm,
-twoside,
-DIV=calc,
-11pt,
-usegeometry,
-headings=big]{scrbook} % Document font size and paper size
+]{scrbook} % Document font size and paper size
 
-\usepackage{graphicx}
-\usepackage{verse}
-\usepackage{xcolor}
-\usepackage{fontspec}
-\usepackage[T1]{fontenc} % International character encodings
-\usepackage{makeidx}
-\usepackage{lettrine}
-\usepackage{scrlayer-scrpage}
-\usepackage{pifont}
-\usepackage{enumitem}
-\usepackage{caption}
-\usepackage[maxlevel=3]{csquotes}
-\usepackage[export]{adjustbox}
-\usepackage{polyglossia}
-\usepackage{afterpage}
-\usepackage{microtype}
-\usepackage{tocbasic}
-\usepackage[pass]{geometry}
-\usepackage{setspace}
-\usepackage{subfiles}
-\usepackage{rotating}
-\usepackage[all]{nowidow}
-\usepackage{setspaceenhanced}
-\usepackage{ebgaramond} 
-\usepackage{epigraph}
-\usepackage{ellipsis}
+\usepackage{bindery}
+\usepackage{dropcaps}
+\usepackage{illustrations}
+\usepackage{epistolary}
 \usepackage{makecell}
 \usepackage{longtable}
-\usepackage{floatpag}
 
-\MakeAutoQuote{»}{«}
-\catcode`\—=13
-\catcode`\—=13
-%\protected\def—{\allowbreak\textemdash\allowbreak}
-\protected\def—{\textemdash}
-\newcommand\longdash{\mbox{---\,}\ignorespaces{}}
 
-\setmainfont{EB Garamond}[UprightFeatures={CharacterVariant=11}]
-\setdefaultlanguage[variant=uk]{english}
 \setotherlanguage{french}
 
-\floatpagestyle{empty}
-\rotfloatpagestyle{empty}
 
-\newcommand{\HUGE}{\fontsize{70}{80}\selectfont}
-\newcommand{\moderatelyhuge}{\fontsize{35}{45}\selectfont}
-\newcommand{\reasonablyhuge}{\fontsize{50}{60}\selectfont}
-\newfontfamily\chapterfont{EB Garamond}
-%\newfontfamily\mytitlefont{GramophoneShadedNF.ttf}
-%\newfontfamily\myauthorfont{Gramophone.NF.ttf}
-\newfontfamily\mytitlefont{riesling.ttf}
-\newfontfamily\myauthorfont{riesling.ttf}
+\setdropcaps{Decocaps.ttf}
 
-\newfontfamily\lettrinefont{Decocaps.ttf}
-\renewcommand{\LettrineFontHook}{\fontspec{Decocaps.ttf}}
-
-\setkomafont{chapter}{\chapterfont\Huge\bfseries}
-\addtokomafont{disposition}{\normalfont}
-%\setkomafont{part}{\chapterfont\HUGE\bfseries}
-%\addtokomafont{partnumber}{\chapterfont\moderatelyhuge}
-%\renewcommand*{\partformat}{\partname~\thepart} %renew so it doesn't have the trailing period
-\renewcommand*{\chapterformat}{\chaptername~\thechapter}
-%\newcommand*\hideentrynumber[1]{}
-
-\makeatletter
-\@ifclasswith{scrbook}{a5paper}
-{%
-  \def\coverimagesize{0.7\linewidth}
-%  \newcommand{\HUGE}{\fontsize{50}{60}\selectfont}
-}{%
-    \def\coverimagesize{0.8\linewidth}
-%  \newcommand{\HUGE}{\fontsize{60}{70}\selectfont}
-}
-\makeatother
-
-\newcount\zzc
-\makeatletter
-\def\zz{%
-\ifnum\prevgraf<\c@L@lines
-\zzc\z@
-\loop
-\ifnum\zzc<\prevgraf
-\advance\zzc\@ne
-\afterassignment\zzda\count@\L@parshape\relax
-\repeat
-\parshape\L@parshape
-\fi}
-\def\zzda{\afterassignment\zzdb\dimen@}
-\def\zzdb{\afterassignment\zzdef\dimen@}
-\def\zzdef#1\relax{\edef\L@parshape{\the\numexpr\count@-1\relax\space #1}}
-\makeatother
 
 \BeforeTOCHead[toc]{%
   \KOMAoptions{parskip=false}% no parskip in ToC
@@ -106,71 +23,25 @@ headings=big]{scrbook} % Document font size and paper size
 \DeclareTOCStyleEntry[beforeskip=0.5cm,entryformat=\chapterfont,linefill=\TOCLineLeaderFill]{chapter}{chapter}
 }
 
-\headsep=10pt
-\headheight=45pt
-\footskip=30pt
-
-\defaultfontfeatures{Ligatures=TeX}
-
 \automark{chapter}
 \lehead{Lord Peter Views The Body}
 \rohead{\leftmark}
 \flushbottom
 
-\graphicspath{ {./images/} }
-
-
 \hyphenation{}
 
 
 \begin{document}
-%\setlength{\epigraphwidth}{0.8\textwidth}
-%\renewcommand{\epigraphflush}{center}
-%\renewcommand{\sourceflush}{center}
-%\renewcommand*{\chaptermarkformat}{}
-%\renewcommand*{\chapterheadendvskip}{\vspace{10pt}}
-%\renewcommand*{\chapterheadstartvskip}{\vspace{0pt}}
-
 \frontmatter
-\pagestyle{empty}
 \begin{titlepage}
-   \recalctypearea
- \newgeometry{left=10mm,right=10mm,top=7mm, bottom=7mm}
-
-  \begin{center}\setstretch{1.8}\mytitlefont
-{\setstretch{1.8}\HUGE Lord Peter}\\
-\vspace{0.5cm}
-{\setstretch{1.8}\HUGE Views The Body}\\
-\vspace*{.5cm}
-\includegraphics[width=\coverimagesize]{summer1923}\\
- \end{center}
- \vspace*{.1cm}
- \begin{center}\setstretch{1.5}\myauthorfont
-{\setstretch{1.5}\reasonablyhuge Dorothy L. Sayers}\\
-\end{center}
+ \includepdf[width=1.3\textwidth]{titlepage.jpg}
 \end{titlepage}
 
-  \recalctypearea
-\restoregeometry
+\KOMAoptions{headings=openright}
 
 
 
-\pagestyle{plain}
-
-\renewcommand*\raggedchapter{\centering}
-
-
-
-\KOMAoptions{headings=openleft}
-
-
-%\vspace*{-2\baselineskip}
 \tableofcontents
-\clearpage
-
-
-%\clearpage
-
 
 
 
@@ -200,27 +71,31 @@ headings=big]{scrbook} % Document font size and paper size
 \KOMAoptions{headings=openleft}
 \chapter*{Colophon}
 \begin{center}
-EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-sixteenth century. This digital version reproduces the original design by Claude Garamont closely: the source for the letterforms is a scan of a specimen known as the \enquote{Berner specimen,} which was composed in 1592 by Conrad Berner, the son-in-law of Christian Egenolff and his successor at the Egenolff print office.  \\github.com/georgd/EB-Garamond
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Title page is set in »Riesling«, by Bright Ideas Foundry.
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Title page illustration is from a fashion plate entitled \foreignquote{french}{Été 1923, No. 53}. The original is held by the Rijksmuseum in Amsterdam.
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
+\begin{minipage}{\textwidth}
 \textit{Lord Peter Views The Body} was Dorothy L. Sayers' (1893\textendash1957) first collection of Lord Peter Wimsey short stories. It was originally published in 1928 by Victor Gollancz Limited in London (UK).
+\end{minipage}
 \vfill
 \rule{0.5\textwidth}{.4pt}
 \vfill
+
+\begin{minipage}{\textwidth}
+Text is set in »EB Garamond«, Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-sixteenth century. Title page is set in »Riesling«, by Bright Ideas Foundry. Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.
+\end{minipage}
+\vfill
+github.com/georgd/EB-Garamond\\fontspace.com/cybapee-creations
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+\begin{minipage}{\textwidth}
+Title page illustration is from a fashion plate entitled \foreignquote{french}{Été 1923, No. 53}. The original is held by the Rijksmuseum in Amsterdam.
+\end{minipage}
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+
+\begin{minipage}{\textwidth}
 This typeset is dedicated to the public domain under a Creative Commons CC0 1.0 Universal deed: creativecommons.org/publicdomain/zero/1.0/
+\end{minipage}
 \vfill
 \rule{0.5\textwidth}{.4pt}
 \vfill
