whose body split to sty files

--- a/Whose Body/source/style/epistolary.sty
+++ b/Whose Body/source/style/epistolary.sty
@@ -46,7 +46,8 @@
   \ifx\\#1\\%
     % If the optional argument is empty, don't add anything
   \else
-    #1\par\medskip
+%    #1\par\medskip
+	\parbox{0.7\textwidth}{#1}\par\bigskip
   \fi
   \textsc{#2}
   \end{flushright}
