--- a/Whose Body/source/whosebodytop.tex
+++ b/Whose Body/source/whosebodytop.tex
@@ -1,171 +1,53 @@
 \documentclass[
-%paper=5.5in:8.5in,
-a5paper,
-BCOR=7mm,
-twoside,
-DIV=calc,
-11pt,
-usegeometry,
-chapterprefix,
-headings=big]{scrbook} % Document font size and paper size
+paper=5.5in:8.5in
+%a5paper
+]{scrbook} 
 
-\usepackage{graphicx}
-\usepackage{verse}
-\usepackage{xcolor}
-\usepackage{fontspec}
-\usepackage[T1]{fontenc} % International character encodings
-\usepackage{makeidx}
-\usepackage{lettrine}
-\usepackage{scrlayer-scrpage}
-\usepackage{pifont}
-\usepackage{enumitem}
-\usepackage{caption}
-\usepackage[maxlevel=3]{csquotes}
-\usepackage[export]{adjustbox}
-\usepackage{polyglossia}
-\usepackage{afterpage}
-\usepackage{microtype}
-\usepackage{tocbasic}
-\usepackage[pass]{geometry}
-\usepackage{setspace}
-\usepackage{subfiles}
-\usepackage{rotating}
-\usepackage[all]{nowidow}
-\usepackage{setspaceenhanced}
-\usepackage{ebgaramond} 
-\usepackage{epigraph}
+\usepackage{bindery}
+\usepackage{dropcaps}
+\usepackage{illustrations}
 \usepackage{dialogue}
-\usepackage{ellipsis}
 
-\MakeAutoQuote{»}{«}
-\catcode`\—=13
-%\protected\def—{\allowbreak\textemdash\allowbreak}
-\protected\def—{\textemdash}
-\newcommand\longdash{\mbox{---\,}\ignorespaces{}}
-
-\newcount\zzc
-\makeatletter
-\def\zz{%
-\ifnum\prevgraf<\c@L@lines
-\zzc\z@
-\loop
-\ifnum\zzc<\prevgraf
-\advance\zzc\@ne
-\afterassignment\zzda\count@\L@parshape\relax
-\repeat
-\parshape\L@parshape
-\fi}
-\def\zzda{\afterassignment\zzdb\dimen@}
-\def\zzdb{\afterassignment\zzdef\dimen@}
-\def\zzdef#1\relax{\edef\L@parshape{\the\numexpr\count@-1\relax\space #1}}
-\makeatother
-
-\setmainfont{EB Garamond}
-\setdefaultlanguage[variant=uk]{english}
 \setotherlanguage{french}
-\newcommand{\moderatelyhuge}{\fontsize{60}{70}\selectfont}
-\newcommand{\reasonablyhuge}{\fontsize{50}{60}\selectfont}
-\newfontfamily\chapterfont{EB Garamond}
-\newfontfamily\mytitlefont{riesling.ttf}
-\newfontfamily\lettrinefont{Decocaps.ttf}
-\renewcommand{\LettrineFontHook}{\fontspec{Decocaps.ttf}}
 
-\setkomafont{chapter}{\chapterfont\Huge\bfseries}
-\addtokomafont{disposition}{\normalfont}
-\setkomafont{part}{\chapterfont\HUGE\bfseries}
-\addtokomafont{partnumber}{\chapterfont\moderatelyhuge}
-%\renewcommand*{\partformat}{\partname~\thepart} %renew so it doesn't have the trailing period
-\renewcommand*{\chapterformat}{\chaptername~\thechapter}
+\renewcommand{\HUGE}{\fontsize{50}{50}\selectfont}
+
+\newfontfamily\mytitlefont{riesling.ttf}
+\setdropcaps{Decocaps.ttf}
 
 
 \KOMAoption{toc}{flat}
-\newcommand*\hideentrynumber[1]{}
 \DeclareTOCStyleEntry[numwidth=0pt,entrynumberformat=\hideentrynumber,linefill=\TOCLineLeaderFill]{chapter}{chapter}
-
-\graphicspath{ {./images/} }
-
-\headsep=10pt
-\headheight=45pt
-\footskip=30pt
-
-\defaultfontfeatures{Ligatures=TeX}
-
-\automark{chapter}
-\lehead{Whose Body?}
-\rohead{Chapter \thechapter}
-\flushbottom
 
 
 
 \hyphenation{}
 
-\makeatletter
-\@ifclasswith{scrbook}{a5paper}
-{%
-  \def\coverimagesize{.6\linewidth}
-  \newcommand{\HUGE}{\fontsize{90}{90}\selectfont}
-}{%
-    \def\coverimagesize{.7\linewidth}
-  \newcommand{\HUGE}{\fontsize{90}{90}\selectfont}
-}
-\makeatother
+\automark{chapter}
+\lehead{Whose Body?}
+\rohead{Chapter \thechapter}
+
 
 
 \begin{document}
-\setlength{\epigraphwidth}{0.8\textwidth}
-\renewcommand{\epigraphflush}{center}
-\renewcommand{\sourceflush}{center}
-%\renewcommand*{\chaptermarkformat}{}
-%\renewcommand*{\chapterheadendvskip}{\vspace{10pt}}
-%\renewcommand*{\chapterheadstartvskip}{\vspace{0pt}}
+
 
 \frontmatter
-\pagestyle{empty}
-\begin{titlepage}
+ \includepdf[width=1.3\textwidth]{titlepage.jpg}
 
-   \recalctypearea
- \newgeometry{left=10mm,right=10mm,top=10mm, bottom=10mm}
-
-  \begin{center}\setstretch{1.8}\mytitlefont
-{\setstretch{1.8}\HUGE Whose Body?}\\
-%\vspace{0.5cm}
-%{\HUGE Body?}\\
-\vfill
-\includegraphics[width=\coverimagesize]{pensiveguy}\\
-\vfill
-\setstretch{1.5}\mytitlefont
-{\setstretch{1.5}\reasonablyhuge Dorothy L. Sayers}\\
-\end{center}
-
-
-%\begin{center}
-%\includegraphics[width=.85\linewidth]{titlecred}\\
-%\includegraphics[width=.4\linewidth]{decodesign}\\
-%\includegraphics[width=.9\linewidth]{authorcredit}\\
-%\end{center}
-\end{titlepage}
 
 
 \pagestyle{plain}
 
-\renewcommand*\raggedchapter{\centering}
 
 
-  \recalctypearea
-\restoregeometry
-\KOMAoptions{headings=openleft}
-%\footskip=20pt
-
-\tableofcontents
-%\clearpage
-
-\KOMAoptions{headings=openright}
+\KOMAoptions{headings=openany}
 
 \chapter*{Dedication}
 ~\\
 ~\\
 \begin{center}\Large
-To M. J.
+To M.~J.
 \end{center}
 
 \noindent Dear Jim:
@@ -175,17 +57,15 @@ This book is your fault. If it had not been for your brutal insistence, Lord Pet
 
 \begin{flushright}
 Yours ever,\\
-D. L. S.
+D.~L.~S.
 \end{flushright}
 
-\footskip=30pt
 
+\tableofcontents
 
 \mainmatter
+\KOMAoptions{headings=openright}
 \pagestyle{headings}
-\renewcommand*{\chapterpagestyle}{plain}
-
-
 \include{chapters/01.tex}
 \include{chapters/02.tex}
 \include{chapters/03.tex}
@@ -206,27 +86,31 @@ D. L. S.
 \KOMAoptions{headings=openleft}
 \chapter*{Colophon}
 \begin{center}
-EB Garamond is Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-sixteenth century.\\github.com/georgd/EB-Garamond
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Title page is set in »Riesling«, by Bright Ideas Foundry.
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.\\fontspace.com/cybapee-creations
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
-Title page illustration is a 1922 lithograph by German/British artist Stephan Krotowski (1881\textendash1948) entitled »Frühjahr« (»Spring«). It originally appeared in \textit{STYL: Blätter für Mode und die angenehmen Dinge des Lebens}, a fashion and lifestyle magazine published in Berlin between 1922 and 1924.
-\vfill
-\rule{0.5\textwidth}{.4pt}
-\vfill
+\begin{minipage}{\textwidth}
 \textit{Whose Body?} was Dorothy L. Sayers' (1893\textendash1957) first Lord Peter Wimsey novel. It was originally published in 1923 by T. Fisher Unwin, in London (UK).
+\end{minipage}
+\vfill
+gutenberg.org/ebooks/58820
 \vfill
 \rule{0.5\textwidth}{.4pt}
 \vfill
+\begin{minipage}{\textwidth}
+Text is set in »EB Garamond«, Georg Mayr-Duffner's free and open source implementation of Claude Garamond’s famous humanist typefaces from the mid-sixteenth century. Title page is set in »Riesling«, by Bright Ideas Foundry. Chapter dropcaps are set in »Deco Caps«, by Petra Heidorn.
+\end{minipage}
+\vfill
+github.com/georgd/EB-Garamond\\fontspace.com/cybapee-creations
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+\begin{minipage}{\textwidth}
+Title page illustration is from a fashion plate entitled \foreignquote{french}{Été 1923, No. 45}. The original is held by the Rijksmuseum in Amsterdam.
+\end{minipage}
+\vfill
+\rule{0.5\textwidth}{.4pt}
+\vfill
+\begin{minipage}{\textwidth}
 This typeset is dedicated to the public domain under a Creative Commons CC0 1.0 Universal deed: creativecommons.org/publicdomain/zero/1.0/
+\end{minipage}
 \vfill
 \rule{0.5\textwidth}{.4pt}
 \vfill
